--- a/index.html
+++ b/index.html
@@ -13,5 +13,22 @@
     <h3> Preço bom... qualidade</h3>
     <img id="ima2"src= "271108-1.webp">
     <h3> os melhores..</h3>
-</body>
-</html>
+    <li> conhecer outros lugares</li>
+    <li> aproveitar o descanso</li>
+    <li> a vida é muito curta</li>
+    <li> aproveite cada instantes...</li>
+    <li> depois de meses de trabalho...</li>
+</ul>
+</main>
+<footer>
+    <h3>... em dezembro...</h3>
+    <ol>
+        <li> conhecer outros lugares</li>
+        <li> aproveitar o descanso</li>
+        <li> a vida é muito curta</li>
+        <li> aproveite cada instante...</li>
+        <li> depois de meses de trabalho...</li>
+        </ol>
+        </footer>
+        </body>
+        </html>
